--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
+    "number-abbreviate": "^2.0.0",
     "randomatic": "^3.1.1",
     "uuid": "^9.0.0",
     "zeptomail": "^3.0.3"
